--- a/nth/templates/nth/home.html
+++ b/nth/templates/nth/home.html
@@ -392,7 +392,7 @@
       if (distance < 0) {
         clearInterval(x);
         // Showing button when timer expires
-        document.getElementById("timer").innerHTML = '<a class="btn btn-primary" type="submit" href="/login/" style="height: 60px; padding-top: 17px;font-family: sans-serif;">Start Hunting!</a>';
+        document.getElementById("timer").innerHTML = '<a class="btn btn-primary" type="submit" href="/loginHunt/" style="height: 60px; padding-top: 17px;font-family: sans-serif;">Start Hunting!</a>';
       }
     }, 1000);
   </script>
