--- a/nth/templates/nth/login.html
+++ b/nth/templates/nth/login.html
@@ -110,6 +110,7 @@
                       <li>Do not prompt or reveal the answers/hints anywhere else you will be disqualified.</li>
                       <li>We reserve the right to ban any user for the use of any unfair means.</li>
                       <li>The decision regarding winners by the NTH team is final and binding.</li>
+                      <li>The leaderboard will be refreshed every 90 seconds.</li>
                   </ul>
                 </div>
               </div>
@@ -119,7 +120,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer" style="background-color: #8898aa;height: 130px; padding-top: 10px;">
+  <footer class="footer" style="background-color: #8898aa;">
     <div class="container">
       <div class="row">
         <div class="col" style="padding: 20px;">
