--- a/nth/templates/nth/home.html
+++ b/nth/templates/nth/home.html
@@ -19,6 +19,7 @@
   <link type="text/css" href="{% static 'assets/css/argon.css' %}" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
   <style>
+
     @keyframes translate-up
     {
       from {margin-top: 1000px;}
@@ -45,6 +46,60 @@
       animation-duration: 8s;
       animation-iteration-count: infinite;
       animation-direction: alternate;
+    }
+
+    @media screen and (max-width: 768px) {
+        .web {
+            display: none;
+        }
+        .mob {
+            display: block;
+        }
+        .level_name {
+            margin-top: 70px !important;
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        .web {
+            display: block;
+        }
+        .mob {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 620px) {
+        .center-on-mob {
+            text-align: center;
+        }
+        .justify-on-mob {
+            text-align: justify;
+        }
+        .event-name {
+            font-size: 36px;
+        }
+        .content-wrap section p {
+            margin: 0;
+            padding: 0.75em 0;
+            font-size: 1.2em;
+            line-height: 1.3;
+        }
+        .logoh {
+            display: none;
+        }
+        .logov {
+            display: block;
+        }
+    }
+
+    @media screen and (min-width: 620px) {
+        .logoh {
+            display: block;
+        }
+        .logov {
+            display: none;
+        }
     }
   </style>
 </head>
@@ -160,13 +215,18 @@
         <span class="translate-down-animation"></span>
       </div>
       <!-- NTH home start -->
-      <div style="text-align: center; padding-top: 20px;padding-bottom: 200px;">
+      <!-- Web View -->
+      <div style="text-align: center; padding-top: 20px;padding-bottom: 200px;" class="web">
         <img src="{% static 'assets/img/brand/nth_logo.png' %}" height="500px" width="500px" alt="NTH Logo"> <!-- NTH Logo -->
         <p style="font-size: x-large;color: whitesmoke;">Network Treasure Hunt</p>
         <p style="font-size: large;color: whitesmoke;">Decrypt the Encrypted!</p>
-        <!--
-        <a class="btn btn-primary" type="submit" href="/login/" style="height: 60px; padding-top: 17px;">Start Hunting!</a>
-        -->
+        <p id="timer" style="font-family: 'Aldrich';color: whitesmoke;font-size: 48px;"></p>
+      </div>
+      <!-- Mob View -->
+      <div style="text-align: center; padding-top: 20px;padding-bottom: 200px;" class="mob">
+        <img src="{% static 'assets/img/brand/nth_logo.png' %}" height="300px" width="300px" alt="NTH Logo"> <!-- NTH Logo -->
+        <p style="font-size: x-large;color: whitesmoke;">Network Treasure Hunt</p>
+        <p style="font-size: large;color: whitesmoke;">Decrypt the Encrypted!</p>
         <p id="timer" style="font-family: 'Aldrich';color: whitesmoke;font-size: 48px;"></p>
       </div>
       <!-- NTH home end -->
@@ -179,7 +239,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col" style="padding: 20px;">
-              <div class="card bg-secondary shadow border-0" style="padding-top: 50px;height: 750px;">
+              <div class="card bg-secondary shadow border-0" style="padding-top: 50px;height: 800px;">
                 <div class="card-body px-lg-5 py-lg-5">
                   <div class="text-center text-muted mb-4" style="font-size:x-large;">
                     Just one step away from the enthralling experience of online hunting!
@@ -197,7 +257,7 @@
               </div>
             </div>
             <div class="col" style="padding: 20px;">
-              <div class="card bg-secondary shadow border-0" style="height: 750px;padding-top: 20px;">
+              <div class="card bg-secondary shadow border-0" style="height: 800px;padding-top: 20px;">
                 <div class="card-body px-lg-5 py-lg-5">
                   <form action="{% url 'nth:Home' %}" method="POST"> <!-- Create Player View -->
                     {% csrf_token %}
@@ -341,7 +401,7 @@
       <!-- Contact Us End -->
     </section>
   </main>
-  <footer class="footer" style="background-color: #8898aa;height: 130px; padding-top: 10px;">
+  <footer class="footer" style="background-color: #8898aa;">
     <div class="container">
       <div class="row">
         <div class="col" style="padding: 20px;">
